# CS481-HPC

./: .gitignore  CMakeLists.txt  LICENSE  README.md
GameOfLife/: CMakeLists.txt  GameOfLife.cpp  GameOfLifeMPI.cpp  GameOfLifeMPI_Kamal.cpp  GameOfLifeStandalone.cpp  UpdateMethods.hpp
MPITesting/: CMakeLists.txt  MPITest.cpp
Util/: ThreadPool.cpp
classCode/: CMakeLists.txt  TheirGameOfLife.cpp
homework1/: CMakeLists.txt  GameOfLife.cpp  UpdateMethods.hpp
homework1Submission/: GameOfLife.cpp  ThreadPool.cpp  UpdateMethods.hpp  build.sh
homework2Submission/: CMakeLists.txt  GameOfLife.cpp  UpdateMethods.hpp  build.sh  setup.sh  test100001000shSCR.i109591  test100001000shSCR.o109591  test10005000shSCRI.i109528  test10005000shSCRI.o109528  test2_5000-5000.i109590  test2_5000-5000.o109590  test_1000-100.o10953  test_1000-100.sh  test_1000-1000.o109522  test_1000-1000.sh  test_1000-5000.sh  test_10000-1000.i  test_10000-1000.i109532  test_10000-1000.sh  test_10000-5000.sh  test_5000-1000.o109529  test_5000-1000.sh  test_5000-5000.i109534  test_5000-5000.o109534  test_5000-5000.sh
homework2Submission/results/: test_1000-100.i10953  test_1000-1000.i109522  test_10000-1000.o109532  test_5000-1000.i109529
homework2Submission/test-scripts/: test_1000-100.sh  test_1000-1000.sh  test_1000-5000.sh  test_10000-1000.sh  test_10000-5000.sh  test_5000-1000.sh  test_5000-5000.sh
homework3Submission/: CMakeLists.txt  GameOfLifeStandalone.cpp  LibraryCode.hpp  build.sh  generateFile1.sh  setup.sh  test-serial.i208818  test10001000-gcc.o114614  test10001000icpx-2.i114612  test5000500016shSC.o115435  test_1000-100.sh  test_1000-1000.sh  test_1000-5000.sh  test_10000-1000.sh  test_10000-5000.sh  test_5000-1000.sh  test_5000-5000-16.sh  test_5000-5000.sh  test_early_stop.sh  test_hw3.sh  test_serial.sh  test_validity.sh  testhw3shSCRIPT-check-noPrint.i115379  testvalidityshSCRI.i115380
homework3Submission/test-results/: test5000500016shSC.i115435  test_1_1.txt  test_early_stop.txt  testhw3shSCRIPT-check-noPrint.o115379  testvalidityshSCRI.o115380
homework3Submission/test-results/comparison/: test10001000-gcc.i114614  test10001000icpx-2.o114612
homework3Submission/test-scripts/: generateFile1.sh  test_1000-100.sh  test_5000-5000-16.sh  test_early_stop.sh  test_hw3-reduced.sh  test_hw3.sh  test_serial.sh  test_validity.sh
homework4Submission/: CMakeLists.txt  GameOfLifeMPI.cpp  GameOfLifeStandalone.cpp  build.sh  setup.sh  test-hw3-rerun.i207376  test-hw3-rerun.o207376  test-hw4-2.i207112  test-hw4-2.o207112  test-hw4-class.i207263  test-hw4-class.o207263  test-validity-class.i207264  test_early_stop.sh  test_hw3.sh  test_hw4-10000.sh  test_hw4-20-only.sh  test_hw4.sh  test_validity.sh  testvalidityshSCRI.o207108
homework4Submission/test-results/: test-earlyStop-class.i207267  test-earlyStop-class.o207267  test-hw4-20only.o207375  test-validity-class.o207264  testearlystopshSCR.o207111  testhw4shSCRIPT.i207110  testhw4shSCRIPT.o207110
homework4Submission/test-results/old/: testearlystopshSCR.i207111  testvalidityshSCRI.i207108
homework4Submission/validation/: output_5x5_10_1.txt  output_5x5_2_2.txt
homework5Submission/: CMakeLists.txt  CudaTest.cu  FileIO.hpp  GameOfLifeCuda.cpp  GameOfLifeCuda.cu  GameOfLifeStandalone.cpp  build.sh  smi.sh  test-hw4-1000-2.i218555  test-hw5-10000-2.i218540  test-hw5-10000-2.o218540  test-hw5-baseline.i218814  test-hw5-baseline.o218814  test_early_stop.sh  test_hw5-5000.sh  validate_cuda.sh
homework5Submission/test-data/: test-OMP-updated.i208780  test-OMP-updated.o208780  test-hw4-10000.o218555  test-hw4-20only.i207375  test-serial.o208818
util/: CMakeLists.txt  CellMatrix.cpp  CellMatrix.hpp  FileIO.hpp  FixedSizeQueue.cpp  FixedSizeQueue.hpp  ICellMatrix.cpp  ICellMatrix.hpp  LibraryCode.cpp  LibraryCode.hpp  MultiArrayCellMatrix.cpp  MultiArrayCellMatrix.hpp  ThreadPool.cpp  ThreadPool.hpp
